# cueflow

./: Cargo.toml  README.md
crates/cueflow-adapters/: Cargo.toml
crates/cueflow-adapters/src/: lib.rs  macos.rs  windows.rs
crates/cueflow-cli/: Cargo.toml
crates/cueflow-cli/src/: main.rs
crates/cueflow-core/: Cargo.toml
crates/cueflow-core/src/: lib.rs
crates/cueflow-core/tests/: contract.rs  variables.rs
crates/cueflow-core/tests/fixtures/: automation-v0.json  automation-v1.json
crates/cueflow-executor/: Cargo.toml
crates/cueflow-executor/src/: lib.rs
crates/cueflow-recorder/: Cargo.toml
crates/cueflow-recorder/src/: lib.rs
crates/cueflow-tauri/: Cargo.toml
crates/cueflow-tauri/src/: lib.rs
docs/: architecture.md  macos-automation-pass.md  windows-automation-hardening.md
examples/: edge-demo-ready.json  edge-page-drill.json  edge-search-cueflow.json  macos-accessibility-permission-drill.json  macos-actionability-readiness-drill.json  macos-coordinate-policy-drill.json  macos-drill-manifest.json  macos-evidence-size-drill.json  macos-image-target-policy-drill.json  macos-missing-window-timeout-drill.json  macos-path-only-policy-drill.json  macos-semantic-actionability-drill.json  macos-semantic-drill-manifest.json  windows-actionability-readiness-drill.json  windows-coordinate-policy-drill.json  windows-drill-manifest.json  windows-image-target-policy-drill.json  windows-missing-window-timeout-drill.json  windows-path-only-policy-drill.json  windows-settings-readiness-drill.json
