[workspace]
members = [
    "crates/cueflow-adapters",
    "crates/cueflow-core",
    "crates/cueflow-executor",
    "crates/cueflow-recorder",
    "crates/cueflow-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/sethjuarez/cueflow"
version = "0.1.0"

[workspace.dependencies]
cueflow-core = { path = "crates/cueflow-core" }
cueflow-executor = { path = "crates/cueflow-executor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
