[workspace]
members = [
    "crates/cueflow-adapters", "crates/cueflow-cli",
    "crates/cueflow-core",
    "crates/cueflow-executor",
    "crates/cueflow-recorder",
    "crates/cueflow-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/sethjuarez/cueflow"
version = "0.1.0"

[workspace.dependencies]
cueflow-core = { path = "crates/cueflow-core" }
cueflow-executor = { path = "crates/cueflow-executor" }
cueflow-adapters = { path = "crates/cueflow-adapters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_Security",
] }
