[package]
name = "cueflow-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cueflow-core.workspace = true
cueflow-executor.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
